# $Id: Changes,v 1.140 2004/09/29 19:07:58 markjugg Exp $
Revision history for Perl extension WWW::Mechanize

1.05_01 XXX
		[ENHANCEMENTS]
		* t/mech-dump.t is now more portable (RT #7690)

		* WWW::Mechanize::Link has a new, easier to remember constructor
		  interface. The old one is still supported. Support for including  
		  an 'alt' attribute was added, which is useful for <area> links.
		  (RT #3317). Thanks to Mark Stosberg.

1.04    Wed Sep 15 23:27:53 CDT 2004

        [ENHANCEMENTS]
        * $mech->get() now accepts a WWW::Mechanize::Link object.

        * $mech->stack_depth(n) lets you set the depth of the mech
          object's page stack.  This way, if you have a Mech that does
          lots of stuff and never/rarely goes back(), you won't be eating
          up memory.  Thanks to BooK and Chi-Fung. (RT #5362)

        [FIXES]
        * Fixed tests that fail under LWP >= 5.800.

        * Added a workaround for LWP::UserAgent->clone() when ->{proxy}
          is undef. (RT #6443)

        * The Referer was getting passed as a URI object sometimes,
          and that caused sadness.  Eugene Haimov supplied a workaround.
          (RT #6372)

        [DOCUMENTATION]
        * Added Ian Langworth's listmod and John Beppu's photobucket
          uploader programs to WWW::Mechanize::Examples.

        * Minor doc tweak for find_link()

        * Finally added a value() func.  Thanks to Spoon,
          who even now, months after his passing, is still contributing
          to Mechanize.


1.02    Tue Apr 13 22:45:10 CDT 2004

        No reason to install if you have 1.00.  Fixes are only in tests.

        [FIXES]
        * t/referer.t didn't cope with spaces in $FindBin::Bin.  Plus,
          it now forces its URL to localhost.


1.00    Sat Apr 10 00:35:51 CDT 2004

        I figure it's about time we hit 1.00, and this version seems
        like a good place to do it, because of the potential breakage
        described below...
