@@ -11,6 +11,7 @@
         <MAP NAME="OTHER_MAP">
             <AREA NOHREF COORDS="1,2,3,4">
             <AREA HREF="http://www.slashdot.org">
+			<AREA HREF="http://mark.stosberg.com" ALT="Mark Stosberg's homepage">
         </MAP>
         <IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
         <IMG SRC="SOME_IMAGE" USEMAP="#OTHER_MAP">
