@@ -1,4 +1,5 @@
 #!perl -Tw
+# WWW::Mechanize tests for <area> tags
 
 use warnings;
 use strict;
@@ -23,13 +24,21 @@ ok( $mech->success, "Fetched $uri" ) or die "Can't get test page";
 
 AREA_CHECKS: {
     my @wanted_links = (
-        [ "http://www.msnbc.com/area", undef, undef, "area" ],
-        [ "http://www.cnn.com/area", undef, undef, "area" ],
-        [ "http://www.cpan.org/area", undef, undef, "area" ],
-        [ "http://www.slashdot.org", undef, undef, "area" ],
+        [ "http://www.msnbc.com/area", undef, undef, "area", undef ],
+        [ "http://www.cnn.com/area", undef, undef, "area", undef ],
+        [ "http://www.cpan.org/area", undef, undef, "area", undef  ],
+        [ "http://www.slashdot.org", undef, undef, "area", undef ],
+        [ "http://mark.stosberg.com", undef, undef, "area", "Mark Stosberg's homepage" ],
     );
     my @links = $mech->find_all_links();
-    @{$_} = @{$_}[0..3] for @links;
+
+   # Skip the 'base' field for now
+	for (@links) {
+		my $alt = $_->[5]; 
+    	@{$_} = @{$_}[0..3];
+		push @{$_}, $alt;
+	}
+
     is_deeply( \@links, \@wanted_links, "Correct links came back" );
 
     my $linkref = $mech->find_all_links();
